--- a/public/style.css
+++ b/public/style.css
@@ -1,26 +1,286 @@
 *{
     margin: 0px;
     box-sizing: border-box;
+    font-family:
+    -apple-system,
+    Segoe UI,
+    Tahoma,
+    Geneva,
+    Verdana,
+    sans-serif !important;
 }
 
 .container{
     display: flex;
-    padding: 30px;
 }
 .container > div{
     width: 100%;
+    padding: 20px;
 }
 
 
+.box_ques{
+    border-right: 1px solid #e7e4e4;
+    position: relative;
+}
+.line_ques{
+    flex-direction: column;
+}
+.line_ques > textarea{
+    width: 100%;
+    height: 100px;
+    font-weight: 600;
+    font-size: 20px;
+}
 
 .input-group {
+    width: 100%;
     margin-bottom: 10px;
+    display: flex;
 }
+.input-group > div{
+    width: 100%;
+    display: flex;
+    margin-left: 15px;
+    margin-bottom: 20px;
+}
+
+.input-group label{
+    font-size: 27px;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.input-group input[type="text"]{
+    width: 100%;
+    height: 45px;
+    margin-right: 10px;
+    font-size: 18px;
+    border: none;
+    border-bottom: 1px solid ;
+    font-weight: 600;
+}
+.input-group input[type="radio"]{
+    cursor: pointer;
+}
+
+.list{
+    width: 100%;
+    height: calc(100vh - 170px );
+    overflow: auto;
+    position: relative;
+}
+.question1{
+    margin: 10px 0px;
+    background-color: #f2f2f2;
+    padding: 15px;
+    text-align: right;
+}
+.question1 >p{
+    font-size: 20px;
+    font-weight: 600;
+    text-align: left;
+    -webkit-line-clamp: 1; /* Số dòng bạn muốn giới hạn */
+    visibility: visible; /* Tránh bug không giới hạn số dòng được do trình duyệt */
+    text-overflow: ellipsis;
+    overflow:hidden;
+    max-height: 30px;
+}
+.question1 ul{
+    list-style: none;
+    text-align: left;
+}
+.question1 li{
+    font-size: 20px;
+    font-weight: 600;
+}
+.question1 button{
+    margin: 0px 10px;
+    padding: 5px 10px;
+    background-color: #5b5bbf;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
 
 .correct-answer {
     color: red;
 }
 
-.question {
-    margin-bottom: 20px;
+
+
+
+.btn{
+    border: none;
+    background-color: #1b1b94;
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+}
+.btn_add_gt{
+    background-color: #e7e4e4;
+    color: #1b1b94;
+}
+
+.line_save{
+    display: flex;
+    justify-content: space-between;
+}
+.addGT{
+    width: 550px;
+    height: 400px;
+    background-color: #f3f3f3;
+    position: absolute;
+    bottom: 90px;
+    display: none;
+    border: 1px solid #e7e4e4;
+    padding: 10px;
+}
+
+.addGT textarea{
+    width: 100%;
+    height: 320px;
+    color: #000000;
+    font-size: 18px;
+}
+
+
+.close_sow{
+    text-align: right;
+}
+.close_sow >button{
+    padding: 5px;
+    background-color: rgb(206, 87, 87);
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+
+.show_thuyetTrinh{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background-color: #ffffff17;
+    /* display: none; */
+    padding: 15px;
+    animation: tt 0.6s forwards;
+}
+@keyframes tt{
+    from{
+        transform: translateY(30px);
+    }
+    to{
+        transform: translateY(0px);
+    }
+}
+.ct_tt{
+    width: 100%;
+    height: 100%;
+    background-color: #fafbfb;
+    border: 1px solid #e7e2e2;
+    border-radius: 20px;
+    padding: 20px;
+}
+.line_cs{
+    display: flex;
+    justify-content: end;
+}
+
+
+
+
+
+
+
+
+.listSlide{
+    height: 100%;
+}
+
+
+
+.show_thuyetTrinh {
+    display: none;
+    position: fixed;
+    width: 100%;
+    overflow: hidden;
+}
+.ct_tt {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.line_cs {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+.slide {
+    width: 100%;
+    transition: transform 0.5s ease-in-out;
+}
+.hidden {
+    display: none;
+}
+.question, .explanation, .answers {
+    margin: 10px 0;
+}
+
+.question{
+    font-weight: 600;
+    font-size: 28px;
+    margin-bottom: 30px;
+    padding: 15px;
+    background-color: #5b5bbf;
+    color: #fff;
+    margin-top: 20px;
+    border-radius: 15px;
+}
+
+.answers{
+}
+.answers > div{
+    margin: 15px;
+    font-size: 20px;
+    padding: 15px;
+    background-color: #575786;
+    cursor: pointer;
+    color: #fff;
+    border-radius: 10px;
+}
+.correct-answer {
+    background-color: #13ac1a !important;
+}
+.incorrect-answer {
+    background-color: rgb(177, 36, 36) !important;
+}
+
+.line_btn_sl{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding:15px;
+}
+.line_btn_sl > button{
+    display: block;
+    padding: 10px;
+    background-color: #d6d9dd;
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 100%;
+    border: none;
+    font-weight: 700;
+}
+
+.explanation{
+    text-align: center;
+    font-size: 19px;
+    font-weight: 600;
 }
